[gd_scene load_steps=24 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_WalkInPlace.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://NetworkGateway.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=12]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=13]
[ext_resource path="res://Players.gd" type="Script" id=14]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_RigidBodyGrab.tscn" type="PackedScene" id=15]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DKeyboard.tscn" type="PackedScene" id=16]
[ext_resource path="res://JointBody.tscn" type="PackedScene" id=17]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5, 0.04, 5 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="OpenSimplexNoise" id=4]
period = 29.5

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.945098, 0.639216, 0.286275, 1 )
albedo_texture = SubResource( 5 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )
vrenabled = false

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 1 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0958182, 1.1261, 0.562169 )

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="Feature_RigidBodyGrab" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 15 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 5 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 13 )]

[node name="Feature_RigidBodyGrab" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 15 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 7 )]
visible = false

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]

[node name="Locomotion_WalkInPlace" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]

[node name="RemoteTransform" type="RemoteTransform" parent="OQ_ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.13649, -1.22184 )
remote_path = NodePath("../../OQ_UI2DCanvas")

[node name="OQ_UI2DCanvas" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.13649, -1.22184 )

[node name="NetworkGateway" parent="OQ_UI2DCanvas" instance=ExtResource( 11 )]
margin_left = 2.51981
margin_top = -1.25995
margin_right = 2.51978
margin_bottom = -1.25995

[node name="Players" type="Spatial" parent="."]
script = ExtResource( 14 )

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 1.87472, 0.5, -4.428 )
mesh = SubResource( 1 )
material/0 = null

[node name="OQ_UILabel" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.173055, 1.45623, -1.86872 )

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 12 )]

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Floor" type="MeshInstance" parent="StaticBody/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="JointBody" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.734137, 0.350291, -0.581669, -0.430637, 0.902525, 0, 0.524971, 0.250488, 0.813426, -0.0984015, 2.17748, -0.339168 )
visible = false

[node name="OQ_UI2DKeyboard" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 0.93901, 0.343889, 0, -0.343889, 0.93901, 0, 1.27545, -0.447969 )
